ok fixed navbar on mobile

--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ a:hover {
 
 @media only screen and (max-width: 950px) {
     .nav-link {
-        font-size: .5em;
+        font-size: .75em;
+        flex-direction: row;
       }
       
 }
